-- www.cabal

name:                www

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            My website & blog(s), using Hakyll

homepage:            https://www.gkayaalp.com/

license:             BSD3
license-file:        LICENSE

author:              İ. Göktuğ Kayaalp

maintainer:          self@gkayaalp.com

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

cabal-version:       >=1.10


executable www-build
  main-is:             Main.hs

  -- Latest hakyll breaks dependencies, this was the Linux Mint 19.3
  -- (Ubuntu Bionic?) version.
  build-depends:       base >=4.9 && <4.10,
                       hakyll >=4.9.8.0 && <4.10,
                       hakyll-sass >=0.2.4,
                       filepath >=1.4

  hs-source-dirs:      src

  default-language:    Haskell2010
